--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -324,7 +324,6 @@ main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, 
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  overflow: hidden;
   cursor: default;
   display: flex;
   justify-content: space-between;
@@ -352,6 +351,7 @@ main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCat
   align-items: center;
   font-size: 16px;
   height: 30px;
+  position: relative;
   font-weight: 400;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
