--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -340,6 +340,7 @@ main{
                     @include sizes(100%);
                     @include displayFlex();
                     font-size: $md;
+                    margin-top: -5px;
                     height: 30px;
                     position: relative;
                     font-weight: $noBold;
