--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -352,6 +352,8 @@ main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCat
   font-size: 16px;
   margin-top: -10px;
   height: 30px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   position: relative;
   font-weight: 400;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
