--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -6,7 +6,7 @@
 
 html {
   width: 100%;
-  height: 3000px;
+  height: 3500px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -319,7 +319,8 @@ main #categoriesSection div {
   align-items: center;
 }
 main #categoriesSection .firstCategory, main #categoriesSection .secondCategory, main #categoriesSection .thirdCategory, main #categoriesSection .fourthCategory,
-main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, main #categoriesSection .seventhCategory, main #categoriesSection .eigthCategory, main #categoriesSection .ninethCategory {
+main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, main #categoriesSection .seventhCategory, main #categoriesSection .eigthCategory, main #categoriesSection .ninethCategory,
+main #categoriesSection .tenCategory {
   background-image: url(/public/imgs/categories/bolsosCategory.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -333,7 +334,8 @@ main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, 
   box-shadow: 0px 0px 20px 1px #b1b1b1;
 }
 main #categoriesSection .firstCategory div, main #categoriesSection .secondCategory div, main #categoriesSection .thirdCategory div, main #categoriesSection .fourthCategory div,
-main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCategory div, main #categoriesSection .seventhCategory div, main #categoriesSection .eigthCategory div, main #categoriesSection .ninethCategory div {
+main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCategory div, main #categoriesSection .seventhCategory div, main #categoriesSection .eigthCategory div, main #categoriesSection .ninethCategory div,
+main #categoriesSection .tenCategory div {
   width: 100%;
   height: 40px;
   display: flex;
@@ -342,7 +344,8 @@ main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCatego
   align-items: center;
 }
 main #categoriesSection .firstCategory div h3, main #categoriesSection .secondCategory div h3, main #categoriesSection .thirdCategory div h3, main #categoriesSection .fourthCategory div h3,
-main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCategory div h3, main #categoriesSection .seventhCategory div h3, main #categoriesSection .eigthCategory div h3, main #categoriesSection .ninethCategory div h3 {
+main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCategory div h3, main #categoriesSection .seventhCategory div h3, main #categoriesSection .eigthCategory div h3, main #categoriesSection .ninethCategory div h3,
+main #categoriesSection .tenCategory div h3 {
   width: 100%;
   height: 100%;
   display: flex;
@@ -425,6 +428,9 @@ main #categoriesSection .eigthCategory {
   background-image: url(/public/imgs/categories/zapatosTaconesCategory.jpeg);
 }
 main #categoriesSection .ninethCategory {
+  background-image: url(/public/imgs/categories/abrigosCategory.jpeg);
+}
+main #categoriesSection .tenCategory {
   background-image: url(/public/imgs/categories/abrigosCategory.jpeg);
 }
 main #categoriesSection #buttonSection {
