--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -318,9 +318,7 @@ main #categoriesSection div {
   flex-direction: column;
   align-items: center;
 }
-main #categoriesSection .firstCategory, main #categoriesSection .secondCategory, main #categoriesSection .thirdCategory, main #categoriesSection .fourthCategory,
-main #categoriesSection .fifthCategory, main #categoriesSection .sixthCategory, main #categoriesSection .seventhCategory, main #categoriesSection .eigthCategory, main #categoriesSection .ninethCategory,
-main #categoriesSection .tenCategory {
+main #categoriesSection .secondCategory, main #categoriesSection .fourthCategory, main #categoriesSection .fifthCategory, main #categoriesSection .seventhCategory {
   background-image: url(/public/imgs/categories/bolsosCategory.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -333,9 +331,7 @@ main #categoriesSection .tenCategory {
   border-radius: 5px;
   box-shadow: 0px 0px 20px 1px #b1b1b1;
 }
-main #categoriesSection .firstCategory div, main #categoriesSection .secondCategory div, main #categoriesSection .thirdCategory div, main #categoriesSection .fourthCategory div,
-main #categoriesSection .fifthCategory div, main #categoriesSection .sixthCategory div, main #categoriesSection .seventhCategory div, main #categoriesSection .eigthCategory div, main #categoriesSection .ninethCategory div,
-main #categoriesSection .tenCategory div {
+main #categoriesSection .secondCategory div, main #categoriesSection .fourthCategory div, main #categoriesSection .fifthCategory div, main #categoriesSection .seventhCategory div {
   width: 100%;
   height: 40px;
   display: flex;
@@ -343,9 +339,7 @@ main #categoriesSection .tenCategory div {
   flex-direction: column;
   align-items: center;
 }
-main #categoriesSection .firstCategory div h3, main #categoriesSection .secondCategory div h3, main #categoriesSection .thirdCategory div h3, main #categoriesSection .fourthCategory div h3,
-main #categoriesSection .fifthCategory div h3, main #categoriesSection .sixthCategory div h3, main #categoriesSection .seventhCategory div h3, main #categoriesSection .eigthCategory div h3, main #categoriesSection .ninethCategory div h3,
-main #categoriesSection .tenCategory div h3 {
+main #categoriesSection .secondCategory div h3, main #categoriesSection .fourthCategory div h3, main #categoriesSection .fifthCategory div h3, main #categoriesSection .seventhCategory div h3 {
   width: 100%;
   height: 100%;
   display: flex;
@@ -447,7 +441,7 @@ main #categoriesSection #buttonSection button {
   border-radius: 30px;
   transition: all 0.3s ease;
   font-family: "Afacad Flux", sans-serif;
-  width: 90%;
+  width: 100%;
   height: 50px;
   text-align: center;
   font-weight: 400;
@@ -456,8 +450,12 @@ main #categoriesSection #buttonSection button {
   cursor: pointer;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   margin-top: 25px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
   height: 30px;
-  font-size: 16px;
+  font-weight: 600;
+  font-size: 23px;
+  border: 0px;
 }
 main #categoriesSection #buttonSection button:hover {
   transform: scale(1.02);
