--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -449,12 +449,13 @@ main #categoriesSection #buttonSection button {
   color: #353535;
   cursor: pointer;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
-  margin-top: 25px;
+  margin-top: 12px;
+  border-radius: 0px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   height: 30px;
   font-weight: 600;
-  font-size: 23px;
+  font-size: 16px;
   border: 0px;
 }
 main #categoriesSection #buttonSection button:hover {
