--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -355,17 +355,15 @@ main #categoriesSection .secondCategory div h3, main #categoriesSection .fourthC
   font-weight: 400;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
+main #categoriesSection .secondCategory div h3 img, main #categoriesSection .fourthCategory div h3 img, main #categoriesSection .fifthCategory div h3 img, main #categoriesSection .seventhCategory div h3 img {
+  width: 20px;
+  height: auto;
+}
 main #categoriesSection .secondCategory {
   background-image: url(/public/imgs/categories/pantalonesJeansCategory.jpeg);
 }
-main #categoriesSection .thirdCategory {
-  background-image: url(/public/imgs/categories/blusasTopsCategory.jpeg);
-}
 main #categoriesSection .fourthCategory {
   background-image: url(/public/imgs/categories/tenisCategory.jpeg);
-}
-main #categoriesSection .fifthCategory {
-  background-image: url(/public/imgs/categories/vestidosCategory.jpeg);
 }
 main #categoriesSection .toBriefcaseSection {
   width: 100%;
@@ -412,20 +410,8 @@ main #categoriesSection .toBriefcaseSection button img {
 main #categoriesSection .toBriefcaseSection button:hover {
   transform: scale(1.05);
 }
-main #categoriesSection .sixthCategory {
-  background-image: url(/public/imgs/categories/ropaDeportivaCategory.jpeg);
-}
 main #categoriesSection .seventhCategory {
   background-image: url(/public/imgs/categories/hoodiesSueterCategory.jpeg);
-}
-main #categoriesSection .eigthCategory {
-  background-image: url(/public/imgs/categories/zapatosTaconesCategory.jpeg);
-}
-main #categoriesSection .ninethCategory {
-  background-image: url(/public/imgs/categories/abrigosCategory.jpeg);
-}
-main #categoriesSection .tenCategory {
-  background-image: url(/public/imgs/categories/abrigosCategory.jpeg);
 }
 main #categoriesSection #buttonSection {
   width: 100%;
