Cambios en el diseño

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -348,7 +348,7 @@ main{
                     font-weight: $noBold;
                     background-image: $secondBackgroundImage;
 
-                    img{
+                    #moreImg{
                         @include sizes(20px,auto);
                     }
                 }
