--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -356,7 +356,7 @@ main #categoriesSection .secondCategory div h3, main #categoriesSection .fourthC
   font-weight: 400;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
-main #categoriesSection .secondCategory div h3 img, main #categoriesSection .fourthCategory div h3 img, main #categoriesSection .fifthCategory div h3 img, main #categoriesSection .seventhCategory div h3 img {
+main #categoriesSection .secondCategory div h3 #moreImg, main #categoriesSection .fourthCategory div h3 #moreImg, main #categoriesSection .fifthCategory div h3 #moreImg, main #categoriesSection .seventhCategory div h3 #moreImg {
   width: 20px;
   height: auto;
 }
