--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -404,6 +404,61 @@ main #categoriesSection .toBriefcaseSection button img {
 main #categoriesSection .toBriefcaseSection button:hover {
   transform: scale(1.05);
 }
+main #categoriesSection .toBriefcaseSection h2 {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+}
+main #categoriesSection .toBriefcaseSection div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 2px;
+  margin-top: 30px;
+}
+main #categoriesSection .toBriefcaseSection div ul {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  align-items: flex-end;
+}
+main #categoriesSection .toBriefcaseSection div ul li {
+  list-style: none;
+  color: #353535;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-end;
+}
+main #categoriesSection .toBriefcaseSection div ul li img {
+  width: 60px;
+  height: auto;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+main #categoriesSection .toBriefcaseSection div ul li img:hover {
+  transform: scale(1.05);
+}
+main #categoriesSection .toBriefcaseSection div ul:nth-child(2) {
+  height: 40px;
+}
+main #categoriesSection .toBriefcaseSection div ul:nth-child(2) li {
+  justify-content: flex-start;
+  font-size: 23px;
+}
 main #categoriesSection .seventhCategory {
   background-image: url(/public/imgs/categories/hoodiesSueterCategory.jpeg);
 }
@@ -449,86 +504,6 @@ main #categoriesSection #buttonSection button #moreImg {
 }
 main #categoriesSection #buttonSection button:hover {
   transform: scale(1.02);
-}
-main #categoriesSection #contact {
-  width: 100%;
-  height: 280px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  background-image: url(/public/imgs/backgroundOpacity.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  gap: 10px;
-  cursor: default;
-  z-index: 10000;
-  box-shadow: 0px 0px 10px 1px #414141;
-}
-main #categoriesSection #contact h2 {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
-}
-main #categoriesSection #contact div {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  padding: 2px;
-  margin-top: 30px;
-}
-main #categoriesSection #contact div ul {
-  width: 100%;
-  height: 60px;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  align-items: center;
-  align-items: flex-end;
-}
-main #categoriesSection #contact div ul li {
-  list-style: none;
-  color: #353535;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  justify-content: flex-end;
-}
-main #categoriesSection #contact div ul li img {
-  width: 60px;
-  height: auto;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-main #categoriesSection #contact div ul li img:hover {
-  transform: scale(1.05);
-}
-main #categoriesSection #contact div ul:nth-child(2) {
-  height: 40px;
-}
-main #categoriesSection #contact div ul:nth-child(2) li {
-  justify-content: flex-start;
-  font-size: 23px;
-}
-main #categoriesSection #contact div:nth-child(3) {
-  margin-top: 30px;
-  justify-content: flex-start;
-}
-main #categoriesSection #contact div:nth-child(3) ul li {
-  justify-content: flex-start;
-  font-weight: 600;
-  font-size: 23px;
 }
 main .sectionForm {
   width: 100%;
