--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -362,7 +362,7 @@ main #categoriesSection .fourthCategory {
 }
 main #categoriesSection .toBriefcaseSection {
   width: 100%;
-  height: 400px;
+  height: 350px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -436,7 +436,6 @@ main #categoriesSection .toBriefcaseSection .contactSection div {
   flex-direction: column;
   align-items: center;
   padding: 2px;
-  margin-top: 30px;
 }
 main #categoriesSection .toBriefcaseSection .contactSection div ul {
   width: 100%;
@@ -467,10 +466,20 @@ main #categoriesSection .toBriefcaseSection .contactSection div ul li img {
 main #categoriesSection .toBriefcaseSection .contactSection div ul li img:hover {
   transform: scale(1.05);
 }
-main #categoriesSection .toBriefcaseSection .contactSection div ul:nth-child(2) {
+main #categoriesSection .toBriefcaseSection .contactSection .numeroCiudad {
   height: 40px;
 }
-main #categoriesSection .toBriefcaseSection .contactSection div ul:nth-child(2) li {
+main #categoriesSection .toBriefcaseSection .contactSection .numeroCiudad ul {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  padding: 10px;
+}
+main #categoriesSection .toBriefcaseSection .contactSection .numeroCiudad ul li {
   justify-content: flex-start;
   font-size: 23px;
 }
