--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -628,7 +628,7 @@ main #whatsapp:hover {
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
@@ -649,26 +649,15 @@ footer div {
   gap: 10px;
   cursor: default;
 }
-footer div img {
-  cursor: pointer;
-  width: 30%;
-  height: auto;
-  transition: all 0.3s ease;
-}
-footer div img:hover {
-  transform: scale(1.05);
-}
 footer div ul {
-  width: 100%;
+  width: 50%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   align-items: flex-start;
-}
-footer div ul li {
-  list-style: none;
+  padding-left: 10px;
 }
 
 @keyframes zoomAnimation {
