--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -630,10 +630,12 @@ footer {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
   z-index: 10999;
+  box-shadow: 0px 0px 20px 1px #414141;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 footer img {
   width: 30%;
