Cambios en el diseño

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -628,7 +628,7 @@ main #whatsapp:hover {
 
 footer {
   width: 100%;
-  height: 100%;
+  height: 300px;
   display: flex;
   justify-content: center;
   flex-direction: row;
