--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -537,7 +537,7 @@ main{
 
 //Footer
 footer{
-    @include sizes();
+    @include sizes($height: 300px);
     @include displayFlex($flexDirection:row);
     z-index: 10999;
     box-shadow: 0px 0px 20px 1px $shadow;
