Cambios en el diseño

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -373,6 +373,7 @@ main #categoriesSection .toBriefcaseSection {
   background-repeat: no-repeat;
   background-size: cover;
   z-index: 10000;
+  margin-top: 50px;
 }
 main #categoriesSection .toBriefcaseSection .catalogoSection {
   width: 100%;
