--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -253,7 +253,7 @@ main #standarSection img {
 }
 main #addProduct, main #productList {
   width: 100%;
-  height: 600px;
+  height: 90%;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
