--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -253,7 +253,7 @@ main #standarSection img {
 }
 main #addProduct, main #productList {
   width: 100%;
-  height: 90%;
+  height: 600px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -354,6 +354,7 @@ main #productList {
   overflow-y: scroll;
   overflow-x: hidden;
   gap: 5px;
+  height: 70%;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main #productList h3 {
