--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -331,14 +331,14 @@ main{
         overflow-y: scroll;
         overflow-x: hidden;
         gap: 5px;
-        height: 70%;
+        height: 50%;
         background-image: $secondBackgroundImage;
 
         h3{
             height: 20px;
         }
         .product{
-            @include sizes($height:80%);
+            @include sizes();
             @include displayFlex($flexDirection:row, $justifyContent: space-between);
             gap: 5px;
             padding-left: 5px;
