feat: adding button to each product to redirect clients to whatsapp

--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -389,7 +389,7 @@ main{
                     overflow: hidden;
                     span{
                         @include sizes(100%,50px);
-                        @include displayFlex();
+                        @include displayFlex($flexDirection:row, $justifyContent: space-around);
                         font-size: $lg;
                         background-image: $secondBackgroundImage;
                     }
