--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -413,8 +413,8 @@ main .category #productos-bolsos div div span, main .category #productos-tenis d
   width: 100%;
   height: 50px;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-direction: row;
   align-items: center;
   font-size: 22px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
