feat: adding button to each product to redirect clients to whatsapp

--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -392,6 +392,15 @@ main{
                         @include displayFlex($flexDirection:row, $justifyContent: space-around);
                         font-size: $lg;
                         background-image: $secondBackgroundImage;
+
+                        button{
+                            @include buttonDesign(100px);
+                            background-image: $secondBackgroundImage;
+                            border: 1px solid $darkFontColor;
+                        }
+                        button:hover{
+                            transform: scale(1.05);
+                        }
                     }
                 }
                 div span:first-child{
