--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -419,6 +419,28 @@ main .category #productos-bolsos div div span, main .category #productos-tenis d
   font-size: 22px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
+main .category #productos-bolsos div div span button, main .category #productos-tenis div div span button {
+  padding: 2px;
+  border: 0px solid #e3e3e3;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 22px;
+  color: #353535;
+  cursor: pointer;
+  background-color: #e3e3e3;
+  box-shadow: 0px 0px 20px 1px black;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  border: 1px solid #353535;
+}
+main .category #productos-bolsos div div span button:hover, main .category #productos-tenis div div span button:hover {
+  transform: scale(1.05);
+}
 main .category #productos-bolsos div div span:first-child, main .category #productos-tenis div div span:first-child {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
