--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -437,6 +437,8 @@ main .category #productos-bolsos div div span button, main .category #productos-
   box-shadow: 0px 0px 20px 1px black;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
+  height: 40px;
+  font-size: 16px;
 }
 main .category #productos-bolsos div div span button:hover, main .category #productos-tenis div div span button:hover {
   transform: scale(1.05);
