--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -399,6 +399,7 @@ main{
                             border: 1px solid $darkFontColor;
                             border-radius: 60px;
                             font-size: $sm;
+                            cursor: pointer;
                         }
                         button:hover{
                             transform: scale(1.05);
