--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -387,7 +387,8 @@ main .category #productos-bolsos, main .category #productos-tenis {
   align-items: center;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
   flex-wrap: wrap;
   gap: 5px;
 }
@@ -427,6 +428,7 @@ main .category #productos-bolsos div div span button, main .category #productos-
   border-radius: 60px;
   font-size: 14px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 main .category #productos-bolsos div div span button:hover, main .category #productos-tenis div div span button:hover {
   transform: scale(1.05);
