--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -371,7 +371,8 @@ main{
         #productos-bolsos, #productos-tenis{
             @include displayFlex($flexDirection:row);
             @include sizes();
-            overflow: hidden;
+            overflow-y: scroll;
+            overflow-x: hidden;
             flex-wrap: wrap;
             gap: 5px;
             
@@ -400,6 +401,7 @@ main{
                             border-radius: 60px;
                             font-size: $sm;
                             cursor: pointer;
+                            transition: all 0.3s ease;
                         }
                         button:hover{
                             transform: scale(1.05);
