--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -40,22 +40,20 @@ nav {
   position: fixed;
   top: 0px;
   background-color: #e3e3e3;
-  z-index: 10000;
+  z-index: 10500;
   gap: 20px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 }
 nav .topNav {
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  background-color: #e3e3e3;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   cursor: default;
-  border-bottom-left-radius: 80px;
-  border-bottom-right-radius: 80px;
-  gap: 20px;
+  gap: 10px;
   box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 }
 nav .topNav img {
@@ -64,7 +62,7 @@ nav .topNav img {
 }
 nav .topNav p {
   font-weight: 600;
-  font-size: 2.5vw;
+  font-size: 16px;
   color: #353535;
 }
 nav header {
@@ -91,7 +89,7 @@ nav header .mobileHeader #myLogo {
   cursor: pointer;
 }
 nav header .mobileHeader img {
-  width: 30px;
+  width: 40px;
   height: auto;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -107,9 +105,6 @@ nav header .mobileHeader ul {
   flex-direction: row;
   align-items: center;
   gap: 15px;
-}
-nav header .mobileHeader ul .contactSpan {
-  cursor: pointer;
 }
 nav header .mobileHeader ul li {
   width: 100px;
@@ -154,6 +149,7 @@ nav header .mobileHeader ul #catalogo:hover {
   flex-direction: row;
   align-items: center;
   align-items: flex-end;
+  margin-top: 10px;
 }
 .burguerMenu div #adminAccess {
   width: 40px;
@@ -194,6 +190,7 @@ nav header .mobileHeader ul #catalogo:hover {
   transition: all 0.3s ease;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
+  font-size: 22px;
 }
 .burguerMenu ul li img {
   width: 30px;
@@ -215,7 +212,7 @@ nav header .mobileHeader ul #catalogo:hover {
   color: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   background-color: transparent;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 22px;
   cursor: default;
 }
 .burguerMenu p {
@@ -421,7 +418,7 @@ main .category #productos-bolsos div div span, main .category #productos-tenis d
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main .category #productos-bolsos div div span button, main .category #productos-tenis div div span button {
-  width: 200px;
+  width: 170px;
   height: 30px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
@@ -429,6 +426,7 @@ main .category #productos-bolsos div div span button, main .category #productos-
   font-size: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
+  font-family: "Afacad Flux", sans-serif;
 }
 main .category #productos-bolsos div div span button:hover, main .category #productos-tenis div div span button:hover {
   transform: scale(1.05);
