--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -104,18 +104,16 @@ nav{
     position: fixed;
     top:0px;
     background-color: $lightFontColor;
-    z-index: 10000;
+    z-index: 10500;
     gap: 20px;
     box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
     .topNav{
-        @include sizes(80%);
+        @include sizes(100%);
         @include displayFlex($flexDirection:row);
-        background-color: $lightFontColor;
+        background-image: $secondBackgroundImage;
         cursor: default;
-        border-bottom-left-radius: 80px;
-        border-bottom-right-radius: 80px;
-        gap: 20px;
+        gap: 10px;
         box-shadow: 0px 0px 5px 1px rgb(58, 58, 58);
 
         img{
@@ -123,7 +121,7 @@ nav{
         }
         p{
             font-weight: $bold;
-            font-size: 2.5vw;
+            font-size: $md;
             color: $darkFontColor;
         }
     }
@@ -142,21 +140,18 @@ nav{
                 cursor: pointer;
             }
             img{
-                @include sizes(30px, auto);
+                @include sizes(40px, auto);
                 cursor: pointer;
                 transition: all 0.3s ease;
             }
             img:hover{
-                transform: scale(1.05)
+                transform: scale(1.05);
             }
             ul{
                 @include sizes(25%,50px);
                 @include displayFlex($flexDirection:row);
                 gap: 15px;
 
-                .contactSpan{
-                    cursor: pointer;
-                }
                 li{
                     @include sizes(100px,80px);
                     @include displayFlex();
@@ -195,6 +190,7 @@ nav{
         @include sizes(90%,$height:50px);
         @include displayFlex($flexDirection:row,$justifyContent:space-between);
         align-items: flex-end;
+        margin-top: 10px;
 
         #adminAccess{
              @include sizes(40px,auto);
@@ -224,6 +220,7 @@ nav{
             cursor: pointer;
             transition: all 0.3s ease;
             backdrop-filter: blur(5px);
+            font-size: $lg;
 
             img{
                 @include sizes(30px,auto);
@@ -243,7 +240,7 @@ nav{
             color: $secondBackgroundImage;
             background-color: transparent;
             font-weight: $bold;
-            font-size: $md;
+            font-size: $lg;
             cursor: default;
         }
     }
@@ -395,13 +392,14 @@ main{
                         background-image: $secondBackgroundImage;
 
                         button{
-                            @include sizes(200px, 30px);
+                            @include sizes(170px, 30px);
                             background-image: $secondBackgroundImage;
                             border: 1px solid $darkFontColor;
                             border-radius: 60px;
                             font-size: $sm;
                             cursor: pointer;
                             transition: all 0.3s ease;
+                            font-family: $afacadFont;
                         }
                         button:hover{
                             transform: scale(1.05);
