--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -312,11 +312,12 @@ main #categoriesSection {
 }
 main #categoriesSection h2 {
   width: 90%;
-  height: 40px;
+  height: 30px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
 }
 main #categoriesSection div {
   width: 45%;
