Changing the style of the nav

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -308,7 +308,7 @@ main h4 {
   flex-direction: column;
   align-items: center;
   font-size: 23px;
-  margin-top: 75px;
+  margin-bottom: -50px;
 }
 main #categoriesSection {
   width: 100%;
