--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -308,7 +308,8 @@ main h4 {
   flex-direction: column;
   align-items: center;
   font-size: 23px;
-  margin-bottom: -50px;
+  margin-top: 100px;
+  margin-bottom: -30px;
 }
 main #categoriesSection {
   width: 100%;
