--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -384,9 +384,8 @@ main .category #productos-bolsos, main .category #productos-tenis {
   align-items: center;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  flex-wrap: wrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
   gap: 5px;
 }
 main .category #productos-bolsos div, main .category #productos-tenis div {
