--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -368,9 +368,9 @@ main{
         #productos-bolsos, #productos-tenis{
             @include displayFlex($flexDirection:row);
             @include sizes();
-            overflow-y: scroll;
-            overflow-x: hidden;
-            flex-wrap: wrap;
+            overflow-y: hidden;
+            overflow-x: scroll;
+            //flex-wrap: wrap;
             gap: 5px;
             
             div{
